--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-SITE_USERNAME=
-SITE_PASSWORD=
-GOOGLE_EMAIL=
-GOOGLE_PASSWORD=
+SITE_USERNAME=me
+SITE_PASSWORD=SmipMe123456
+GOOGLE_EMAIL=eyoqa74@gmail.com
+GOOGLE_PASSWORD=Mass@4AM
