modified the docker file, updated the edge cases and modified the handle permission function

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,5 @@ SITE_USERNAME=me
 SITE_PASSWORD=SmipMe123456
 GOOGLE_EMAIL=eyoqa74@gmail.com
 GOOGLE_PASSWORD=Mass@4AM
+INVALID_GOOGLE_EMAIL=lolafiyinoo@gmail.com
+INVALID_GOOGLE_PASSWORD=nopassword123
