--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.51.1",
-    "@types/node": "^22.13.14",
-    "typescript": "^5.8.2",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^22.13.14",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.56.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
     "body-parser": "^1.20.2",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "zod": "^3.22.4"
   }
